@@ -9,6 +9,7 @@ module_init("hostserv/main", "The Chakora Project", "0.1", \&init_hs_main, \&voi
 
 sub init_hs_main {
 	hook_kill_add(\&ircd_hs_kill);
+	hook_identify_add(\&ircd_hs_ns_id);
 	create_cmdtree("hostserv");
 	if (!$Chakora::synced) { hook_pds_add(\&svs_hs_main); }
 	else { svs_hs_main(); }
@@ -21,7 +22,9 @@ sub void_hs_main {
 	serv_del('HostServ');
 	delete_cmdtree("hostserv");
 	hook_kill_del(\&ircd_hs_kill);
+	hook_identify_del(\&ircd_hs_ns_id);
 	delete_sub 'ircd_hs_kill';
+	delete_sub 'ircd_hs_ns_id';
 	delete_sub 'void_hs_main';
 }
 
@@ -65,5 +68,23 @@ sub ircd_hs_kill {
 	if ($target eq $Chakora::svsuid{'hostserv'}) {
 		serv_del("HostServ");
 		ircd_hs_main();
+	}
+}
+
+sub ircd_hs_ns_id {
+	my ($user, $account) = @_;
+	
+	unless (!metadata(1, $account, 'data:vhost')) {
+		if (lc(config('server', 'ircd')) eq 'inspircd12') {
+			if ($Chakora::PROTO_SETTINGS{modules} =~ m/m_chghost.so/i) {
+				serv_chghost($user, metadata(1, $account, 'data:vhost'));
+			}
+			else {
+				logchan('hostserv', "\002WARNING\002: m_chghost.so is not loaded! Unable to set vHost.");
+			}
+		}
+		else {
+			serv_chghost($user, metadata(1, $account, 'data:vhost'));
+		}
 	}
 }
